package com.adham.weatherSample.helpers

object TestingConstantHelper {
    const val CITY_INPUT_TAG = "cityInput"

    const val WEATHER_FORECAST_BUTTON = "weatherForecastButton"

    const val HOURLY_FORECAST_LIST = "hourlyForecastList"

    const val CLEAR_TEXT = "Clear text"

    const val SAVE_ADDRESS_BUTTON = "saveAddressButton"
}
